refactor(api): watchlist rewrite
